Terminei a parte do header

--- a/css/chamada.css
+++ b/css/chamada.css
@@ -6,7 +6,7 @@
     color: #FFF;
     text-align: center;
     
-    background-color: #00161C;
+    background-color: var(--bg-chamada-mobile);
 
     padding-top: 12.25rem;
     padding-bottom: 2.5rem;
